# chaostrace-sdk

./: .gitignore  CLAUDE.md  LICENSE  README.md
docs/: integration-guide.md
python/: README.md  pyproject.toml
python/chaostrace/: __init__.py  _anthropic.py  _client.py  _openai.py
typescript/: README.md  package.json  tsconfig.json
typescript/src/: anthropic.ts  client.ts  index.ts  openai.ts
